--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
 requires = [
-  "numpy==2.1.2",
+  "numpy>=1.14.5,<2.1.3",
   "swig==4.3.0",
-  "cmake==3.31.1",
-  "wheel==0.41.3",
+  "cmake==3.31.4",
+  "wheel==0.45.1",
   #"setuptools==57.5.0; python_version<'3.9'",
   #"setuptools==75.3.0; python_version>='3.9'",
   "setuptools==75.3.0",
