--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -184,7 +184,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install -U pip
-        pip install -U setuptools wheel build
+        pip install -U build
 
         # Build requirements
         pip install -U -r requirements.txt -r requirements_dev.txt
