--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -2,6 +2,7 @@
 swig==4.3.0 # Must agree with python/pyproject.toml
 cmake==3.31.4 # Must agree with python/pyproject.toml
 wheel==0.45.1 # Must agree with python/pyproject.toml
+pytest
 
 # Note, the setuptools==75.3.0 is the highest supported version in the Windows wheel
 setuptools==75.3.0 # Must agree with python/pyproject.toml
