--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -5,6 +5,7 @@ requires = [
   "cmake==3.31.4", # must agree with ../requirements_dev.txt 
   "setuptools==75.3.0", # must agree with ../requirements_dev.txt 
   "wheel==0.45.1", # must agree with ../requirements_dev.txt 
+  "pytest"
 ]
 build-backend = "setuptools.build_meta"
 
