pytest in separate part in ci-workdlow

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -106,11 +106,13 @@ jobs:
     - name: Build Linux wheel
       run: python3 -m pip wheel -w dist ./python
 
-    - name: Install python package, test the installation and test with pytest
+    - name: Install python package and test the installation 
       run: |
         python3 -m pip install --user dist/*.whl
         python3 bindings/python/tests/__main__.py
+
+    - name: Test that it works with pytest and warnings as errors in pyproject
         python3 -m pip install pytest
-        pytest python tests
+        pytest python/tests
 
 
