When running from Python, use site.PREFIXES to derive dlite_root directory.

--- a/src/pyembed/CMakeLists.txt
+++ b/src/pyembed/CMakeLists.txt
@@ -8,5 +8,6 @@ set(pyembed_sources
   pyembed/dlite-python-storage.c
   pyembed/dlite-python-mapping.c
   pyembed/dlite-python-protocol.c
+  pyembed/dlite-python-path.c
   PARENT_SCOPE
 )
