Introduced DLITE_PKG_ROOT and cleaned up paths

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -37,7 +37,7 @@ jobs:
       # workflow for Linux systems.
     - name: Install dependencies
       run: |
-        sudo apt-get update --fix-missing && \
+        sudo apt-get update --fix-missing
         sudo apt-get install \
           libxml2-dev \
           libxslt-dev \
