--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -83,7 +83,7 @@ set_target_properties(dlitepy PROPERTIES
   )
 
 
-# Python only looks for .so for compiled extension modules on all Unix platforms including MacOS 
+# Python only looks for .so for compiled extension modules on all Unix platforms including MacOS
 # which would usually use .dylib thus change for just the extension module.
 if(APPLE)
   set_target_properties(dlitepy PROPERTIES
@@ -255,28 +255,28 @@ add_dependencies(
 # Based on: http://developer.intra2net.com/git/?p=libftdi;a=blob;f=python/CMakeLists.txt;h=93410544fac2a45eec51cb8dd344708b3bbdfe67;hb=HEAD
 install(
   DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/dlite
-  DESTINATION "${Python3_SITE}"
+  DESTINATION "${Python3_SITEARCH}"
   USE_SOURCE_PERMISSIONS
   PATTERN ".gitignore" EXCLUDE
   PATTERN "*~" EXCLUDE
 )
 install(
   DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python-mapping-plugins
-  DESTINATION ${Python3_PREFIX}share/dlite
+  DESTINATION ${DLITE_PKG_ROOT}/share/dlite
   USE_SOURCE_PERMISSIONS
   PATTERN ".gitignore" EXCLUDE
   PATTERN "*~" EXCLUDE
 )
 install(
   DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python-protocol-plugins
-  DESTINATION ${Python3_PREFIX}share/dlite
+  DESTINATION ${DLITE_PKG_ROOT}/share/dlite
   USE_SOURCE_PERMISSIONS
   PATTERN ".gitignore" EXCLUDE
   PATTERN "*~" EXCLUDE
 )
 install(
   DIRECTORY ${dlite_SOURCE_DIR}/storages/python/python-storage-plugins
-  DESTINATION ${Python3_PREFIX}share/dlite
+  DESTINATION ${DLITE_PKG_ROOT}/share/dlite
   USE_SOURCE_PERMISSIONS
   PATTERN ".gitignore" EXCLUDE
   PATTERN "*.json" EXCLUDE
