--- a/cmake/dliteConfig.cmake.in
+++ b/cmake/dliteConfig.cmake.in
@@ -5,7 +5,8 @@ set(DLITE_VERSION @dlite_VERSION@)
 #include(configVersion.cmake)
 #include(configExport.cmake)
 
-set(DLITE_ROOT "@CMAKE_INSTALL_PREFIX@")
+set(DLITE_ROOT "@DLITE_ROOT@")
+set(DLITE_PKG_ROOT "@DLITE_PKG_ROOT@")
 
 set(WITH_PYTHON    @WITH_PYTHON@)
 set(WITH_HDF5      @WITH_HDF5@)
@@ -14,18 +15,18 @@ set_and_check(DLITE_INCLUDE_DIRS  "@DLITE_ROOT@/@DLITE_INCLUDE_DIRS@")
 set_and_check(DLITE_LIBRARY_DIR   "@DLITE_ROOT@/@DLITE_LIBRARY_DIR@")
 set_and_check(DLITE_RUNTIME_DIR   "@DLITE_ROOT@/@DLITE_RUNTIME_DIR@")
 
-set_and_check(DLITE_TEMPLATE_DIRS "@DLITE_ROOT@/@DLITE_TEMPLATE_DIRS@")
+set_and_check(DLITE_TEMPLATE_DIRS "@DLITE_PKG_ROOT@/@DLITE_TEMPLATE_DIRS@")
 set_and_check(DLITE_STORAGE_PLUGIN_DIRS
-  "@DLITE_ROOT@/@DLITE_STORAGE_PLUGIN_DIRS@")
+  "@DLITE_PKG_ROOT@/@DLITE_STORAGE_PLUGIN_DIRS@")
 set_and_check(DLITE_MAPPING_PLUGIN_DIRS
-  "@DLITE_ROOT@/@DLITE_MAPPING_PLUGIN_DIRS@")
+  "@DLITE_PKG_ROOT@/@DLITE_MAPPING_PLUGIN_DIRS@")
 if(WITH_PYTHON)
   set_and_check(DLITE_PYTHON_STORAGE_PLUGIN_DIRS
-    "@DLITE_ROOT@/@DLITE_PYTHON_STORAGE_PLUGIN_DIRS@")
+    "@DLITE_PKG_ROOT@/@DLITE_PYTHON_STORAGE_PLUGIN_DIRS@")
   set_and_check(DLITE_PYTHON_MAPPING_PLUGIN_DIRS
-    "@DLITE_ROOT@/@DLITE_PYTHON_MAPPING_PLUGIN_DIRS@")
+    "@DLITE_PKG_ROOT@/@DLITE_PYTHON_MAPPING_PLUGIN_DIRS@")
 endif()
-set_and_check(DLITE_STORAGES      "@DLITE_ROOT@/@DLITE_STORAGES@")
+set_and_check(DLITE_STORAGES      "@DLITE_PKG_ROOT@/@DLITE_STORAGES@")
 
 if(NOT DLITE_LIBRARIES)
   # Set LITE_LIBRARIES by progressively appending to it
@@ -45,9 +46,9 @@ if(NOT DLITE_LIBRARIES)
   # Python
   if(WITH_PYTHON)
     set_and_check(DLITE_PYTHON_STORAGE_PLUGIN_DIRS
-      "@DLITE_ROOT@/@DLITE_PYTHON_STORAGE_PLUGIN_DIRS@")
+      "@DLITE_PKG_ROOT@/@DLITE_PYTHON_STORAGE_PLUGIN_DIRS@")
     set_and_check(DLITE_PYTHON_MAPPING_PLUGIN_DIRS
-      "@DLITE_ROOT@/@DLITE_PYTHON_MAPPING_PLUGIN_DIRS@")
+      "@DLITE_PKG_ROOT@/@DLITE_PYTHON_MAPPING_PLUGIN_DIRS@")
     set(Python3_LIBRARIES "@Python3_LIBRARIES@" CACHE STRING
       "Python libraries")
     set(Python3_INCLUDE_DIRS "@Python3_INCLUDE_DIRS@" CACHE STRING
