--- a/cmake/Dockerfile-ubuntu
+++ b/cmake/Dockerfile-ubuntu
@@ -16,25 +16,32 @@
 
 FROM ubuntu:latest AS dependencies
 
+SHELL ["/bin/bash", "-c"]
+
 WORKDIR /io
 
-RUN apt update --fix-missing
-RUN apt install -y \
+RUN apt-get update --fix-missing
+RUN apt-get install -y \
+    libhdf5-dev \
+    python3 \
+    python3-dev \
     python3-pip \
-    python3-venv \
-    cmake \
-    swig
+    python3-venv
 
-RUN mkdir ~/.envs
-RUN python3 -m venv ~/.envs/dlite
-RUN . ~/.envs/dlite/bin/activate
+#    rdflib0-dev
 
+# Create virtual environment
+#RUN mkdir /tmp/venv
+#RUN python3 -m venv /tmp/venv/dlite
+#RUN source /tmp/venv/dlite/bin/activate
+
+# Install Python dependencies
 RUN pip3 install -U pip
-COPY requirements.txt .
-RUN pip3 install -r requirements.txt
+COPY requirements.txt requirements_dev.txt .
+RUN pip3 install -r requirements.txt -r requirements_dev.txt
 
 COPY CMakeLists.txt LICENSE README.md .
-COPY python/MANIFEST.in python/pyproject.toml python/setup.py python/.
+COPY python/pyproject.toml python/setup.py
 COPY bindings bindings
 COPY cmake cmake
 COPY doc doc
@@ -44,7 +51,11 @@ COPY storages storages
 COPY tools tools
 
 FROM dependencies AS build
-WORKDIR /tmp/build-ubuntu
-RUN cmake -DWITH_HDF5=NO /io
+WORKDIR /build
+RUN cmake /io -DFORCE_EXAMPLES=ON -DCMAKE_INSTALL_PREFIX=/usr/local
+
+FROM build AS install
 RUN make install
+
+FROM install AS test
 RUN ctest
