--- a/examples/pytestdebug/pyproject.toml
+++ b/examples/pytestdebug/pyproject.toml
@@ -1,12 +1,19 @@
 [build-system]
 requires = [
-  "swig==4.3.0",
-  "cmake==3.31.4",
   "setuptools==75.3.0",
   "wheel==0.45.1",
-  "pytest==8.3.4",
 ]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "pytestdebug"
+version = "0.1"
+
+dependencies = [
+  "swig==4.3.0",
+  "cmake==3.31.4",
+  "pytest==8.3.4",
+]
 
 
 [tool.pytest.ini_options]
