--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -812,6 +812,24 @@ string(REPLACE ";" "|" dlite_STORAGES_WINDOWS "${dlite_STORAGES_WINDOWS}")
 
 # Add target "show" for showing test environment
 set(test_env
+  " "
+  "========== Paths relative to DLITE_ROOT =========="
+  "DLITE_ROOT:         ${DLITE_ROOT}"
+  "DLITE_INCLUDE_DIRS: ${DLITE_INCLUDE_DIRS}"
+  "DLITE_LIBRARY_DIR:  ${DLITE_LIBRARY_DIR}"
+  "DLITE_RUNTIME_DIR:  ${DLITE_RUNTIME_DIR}"
+  "DLITE_PYTHONPATH:   ${DLITE_PYTHONPATH}"
+  " "
+  "========== Paths relative to DLITE_PKG_ROOT =========="
+  "DLITE_PKG_ROOT:                    ${DLITE_PKG_ROOT}"
+  "DLITE_STORAGE_PLUGIN_DIRS:         ${DLITE_STORAGE_PLUGIN_DIRS}"
+  "DLITE_MAPPING_PLUGIN_DIRS:         ${DLITE_MAPPING_PLUGIN_DIRS}"
+  "DLITE_PYTHON_STORAGE_PLUGIN_DIRS:  ${DLITE_PYTHON_STORAGE_PLUGIN_DIRS}"
+  "DLITE_PYTHON_MAPPING_PLUGIN_DIRS:  ${DLITE_PYTHON_MAPPING_PLUGIN_DIRS}"
+  "DLITE_PYTHON_PROTOCOL_PLUGIN_DIRS: ${DLITE_PYTHON_PROTOCOL_PLUGIN_DIRS}"
+  "DLITE_TEMPLATE_DIRS:               ${DLITE_TEMPLATE_DIRS}"
+  "DLITE_STORAGES:                    ${DLITE_STORAGES}"
+  " "
   "========== Test environment ========="
   "export DLITE_ROOT=${DLITE_ROOT}"
   "export PATH=${dlite_PATH_NATIVE}"
@@ -819,6 +837,7 @@ set(test_env
   "export LD_LIBRARY_PATH=${dlite_LD_LIBRARY_PATH}"
   "export PYTHONPATH=${dlite_PYTHONPATH_NATIVE}"
   "PYTHONPATH=${dlite_PYTHONPATH}"
+  " "
   "export DLITE_STORAGE_PLUGIN_DIRS=${dlite_STORAGE_PLUGINS}"
   "export DLITE_MAPPING_PLUGIN_DIRS=${dlite_MAPPING_PLUGINS}"
   "export DLITE_PYTHON_STORAGE_PLUGIN_DIRS=${dlite_PYTHON_STORAGE_PLUGINS}"
@@ -826,28 +845,28 @@ set(test_env
   "export DLITE_PYTHON_PROTOCOL_PLUGIN_DIRS=${dlite_PYTHON_PROTOCOL_PLUGINS}"
   "export DLITE_TEMPLATE_DIRS=${dlite_TEMPLATES}"
   "export DLITE_STORAGES='${dlite_STORAGES}'"
-  ""
+  " "
   "========== Python ==================="
   "Python3_LIBRARIES:          ${Python3_LIBRARIES}"
   "Python3_LIBRARY_DIRS:       ${Python3_LIBRARY_DIRS}"
   "Python3_INCLUDE_DIRS:       ${Python3_INCLUDE_DIRS}"
   "Python3_NumPy_INCLUDE_DIRS: ${Python3_NumPy_INCLUDE_DIRS}"
   "Python3_NumPy_LIBRARY_DIRS: ${Python3_NumPy_LIBRARY_DIRS}"
-  ""
+  " "
   "========== Redland =================="
   "REDLAND_INCLUDE_DIRS: ${REDLAND_INCLUDE_DIRS}"
   "REDLAND_LIBRARIES:    ${REDLAND_LIBRARIES}"
   "REDLAND_LIBRARY_DIR:  ${REDLAND_LIBRARY_DIR}"
   "REDLAND_RUNTIME_DIR:  ${REDLAND_RUNTIME_DIR}"
-  ""
+  " "
   "RASQAL_INCLUDE_DIRS: ${RASQAL_INCLUDE_DIRS}"
   "RASQAL_LIBRARIES:    ${RASQAL_LIBRARIES}"
   "RASQAL_DEFINITIONS:  ${RASQAL_DEFINITIONS}"
-  ""
+  " "
   "RAPTOR_INCLUDE_DIRS: ${RAPTOR_INCLUDE_DIRS}"
   "RAPTOR_LIBRARIES:    ${RAPTOR_LIBRARIES}"
   "RAPTOR_DEFINITIONS:  ${RAPTOR_DEFINITIONS}"
-  ""
+  " "
   "========== HDF5 ====================="
   "HDF5_INCLUDE_DIRS:    ${HDF5_INCLUDE_DIRS}"
   "HDF5_LIBRARIES:       ${HDF5_LIBRARIES}"
