--- a/src/utils/config.h.in
+++ b/src/utils/config.h.in
@@ -85,6 +85,9 @@
 #cmakedefine HAVE_GETOPT
 #cmakedefine HAVE_GETOPT_LONG
 
+#cmakedefine HAVE_ACCESS
+#cmakedefine HAVE__ACCESS
+
 #cmakedefine HAVE_SNPRINTF
 #cmakedefine HAVE__SNPRINTF
 #cmakedefine HAVE_VSNPRINTF
