--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -161,7 +161,7 @@ jobs:
 
   build_sdist:
     name: Build sdist
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     if: github.repository == 'SINTEF/dlite' && startsWith(github.ref, 'refs/tags/v')
 
     steps:
@@ -202,7 +202,7 @@ jobs:
   publish:
     needs: [cd_build_wheels,build_sdist]
     name: Publish DLite distributions
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       id-token: write
 
